[gd_scene load_steps=16 format=3 uid="uid://ctoupgkahdulj"]

[ext_resource type="Script" path="res://class_select.gd" id="1_rdw4m"]
[ext_resource type="Texture2D" uid="uid://b6bulqqep5xm" path="res://assets/images/backgrounds/bedroom-boy.png" id="2_87gg5"]
[ext_resource type="Texture2D" uid="uid://dx08tvq1ieo8" path="res://assets/images/buttons.png" id="3_6urvs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uccrm"]
texture = ExtResource("3_6urvs")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d4dbx"]
texture = ExtResource("3_6urvs")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d1xcp"]
texture = ExtResource("3_6urvs")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="Theme" id="Theme_t3501"]
Button/styles/hover = SubResource("StyleBoxTexture_uccrm")
Button/styles/normal = SubResource("StyleBoxTexture_d4dbx")
Button/styles/pressed = SubResource("StyleBoxTexture_d1xcp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4xyic"]
texture = ExtResource("3_6urvs")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hfq0n"]
texture = ExtResource("3_6urvs")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1qb66"]
texture = ExtResource("3_6urvs")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="Theme" id="Theme_xi8lp"]
Button/styles/hover = SubResource("StyleBoxTexture_4xyic")
Button/styles/normal = SubResource("StyleBoxTexture_hfq0n")
Button/styles/pressed = SubResource("StyleBoxTexture_1qb66")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eu4b1"]
texture = ExtResource("3_6urvs")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2reyu"]
texture = ExtResource("3_6urvs")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eft6w"]
texture = ExtResource("3_6urvs")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="Theme" id="Theme_05nyt"]
Button/styles/hover = SubResource("StyleBoxTexture_eu4b1")
Button/styles/normal = SubResource("StyleBoxTexture_2reyu")
Button/styles/pressed = SubResource("StyleBoxTexture_eft6w")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rdw4m")

[node name="Bedroom-boy" type="Sprite2D" parent="."]
position = Vector2(577, 325)
scale = Vector2(0.640625, 0.628906)
texture = ExtResource("2_87gg5")

[node name="Kelas 1" type="Button" parent="."]
offset_left = 35.0
offset_top = 56.0
offset_right = 99.0
offset_bottom = 111.0
theme = SubResource("Theme_t3501")
text = "Kelas 1"

[node name="Kelas 2" type="Button" parent="."]
offset_left = 120.0
offset_top = 60.0
offset_right = 183.0
offset_bottom = 113.0
theme = SubResource("Theme_xi8lp")
text = "Kelas 2"

[node name="Kelas 3" type="Button" parent="."]
offset_left = 193.0
offset_top = 57.0
offset_right = 272.0
offset_bottom = 111.0
theme = SubResource("Theme_05nyt")
text = "Kelas 3"

[connection signal="pressed" from="Kelas 1" to="." method="_on_kelas_1_pressed"]
[connection signal="pressed" from="Kelas 2" to="." method="_on_kelas_2_pressed"]
[connection signal="pressed" from="Kelas 3" to="." method="_on_kelas_3_pressed"]
